"""BUILD file for Go WebAssembly component rules"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//providers",
    ],
    visibility = ["//visibility:public"],
)