"""BUILD file for Rust WASM component rules"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//rust/private:clippy",
        "//rust/private:rust_wasm_binary",
        "//rust/private:rust_wasm_component",
        "//rust/private:rust_wasm_component_bindgen",
        "//rust/private:rust_wasm_component_test",
        "//rust/private:rust_wasm_component_wizer",
    ],
)

# Backward compatibility shim - re-exports from private
# Used by //go, //cpp, //js for shared WASM transitions
bzl_library(
    name = "transitions",
    srcs = ["transitions.bzl"],
    deps = [
        "//rust/private:transitions",
    ],
)
