"""Test WAC composition with simple components"""

load("@rules_wasm_component//rust:defs.bzl", "rust_wasm_component_bindgen")
load("@rules_wasm_component//wac:defs.bzl", "wac_compose")
load("@rules_wasm_component//wit:defs.bzl", "wit_library")

# Simple WIT interface for testing
wit_library(
    name = "simple_interfaces",
    package_name = "test:simple@1.0.0",
    srcs = ["simple.wit"],
)

# Simple component
rust_wasm_component_bindgen(
    name = "simple_component",
    srcs = ["src/lib.rs"],
    profiles = ["release"],
    wit = ":simple_interfaces",
)

# Test no-WASI WIT interface
wit_library(
    name = "nowasi_interfaces",
    package_name = "test:nowasi@1.0.0",
    srcs = ["simple_no_wasi.wit"],
)

# Test component without WASI (using no_std)
rust_wasm_component_bindgen(
    name = "nowasi_component",
    srcs = ["src/lib_no_wasi.rs"],
    profiles = ["release"],
    wit = ":nowasi_interfaces",
)

# Simple WAC composition that should work
wac_compose(
    name = "simple_system",
    components = {
        ":simple_component": "test:simple",
    },
    composition = """
        package test:composition@1.0.0;

        let comp = new test:simple { ... };
        export comp as main;
    """,
    use_symlinks = True,
)

# Test composition with no-WASI component
wac_compose(
    name = "nowasi_system",
    components = {
        ":nowasi_component": "test:nowasi",
    },
    composition = """
        package test:nowasi-composition@1.0.0;

        let comp = new test:nowasi {};
        export comp as main;
    """,
    use_symlinks = True,
)
