"""Toolchain type definitions"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# File Operations Component toolchain configuration
load("//toolchains:file_ops_toolchain.bzl", "file_ops_toolchain")

# WASM Tools Component toolchain configuration
load("//toolchains:wasm_tools_component_toolchain.bzl", "wasm_tools_component_toolchain")

package(default_visibility = ["//visibility:public"])

# Toolchain type for WebAssembly tools
toolchain_type(
    name = "wasm_tools_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for WASI SDK
toolchain_type(
    name = "wasi_sdk_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for WebAssembly Package Tools (wkg)
toolchain_type(
    name = "wkg_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for jco (JavaScript Component Tools)
toolchain_type(
    name = "jco_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for C/C++ WebAssembly components
toolchain_type(
    name = "cpp_component_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for TinyGo WASI Preview 2 WebAssembly components
toolchain_type(
    name = "tinygo_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for Wizer WebAssembly pre-initialization
toolchain_type(
    name = "wizer_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for Wasmtime WebAssembly runtime
toolchain_type(
    name = "wasmtime_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for File Operations Component
toolchain_type(
    name = "file_ops_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for WASM Tools Integration Component
toolchain_type(
    name = "wasm_tools_component_toolchain_type",
    visibility = ["//visibility:public"],
)

# Bzl library for toolchain implementation
bzl_library(
    name = "wasm_toolchain",
    srcs = ["wasm_toolchain.bzl"],
    visibility = ["//visibility:public"],
)

# Bzl library for wkg toolchain implementation
bzl_library(
    name = "wkg_toolchain",
    srcs = ["wkg_toolchain.bzl"],
    visibility = ["//visibility:public"],
)

# Bzl library for jco toolchain implementation
bzl_library(
    name = "jco_toolchain",
    srcs = ["jco_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":diagnostics",
        ":tool_cache",
        "//checksums:registry",
    ],
)

# Bzl library for C/C++ WebAssembly component toolchain implementation
bzl_library(
    name = "cpp_component_toolchain",
    srcs = ["cpp_component_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":diagnostics",
        ":tool_cache",
        "//checksums:registry",
    ],
)

# Bzl library for TinyGo WASI Preview 2 toolchain implementation
bzl_library(
    name = "tinygo_toolchain",
    srcs = ["tinygo_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":diagnostics",
        ":tool_cache",
        "//checksums:registry",
    ],
)

# Bzl library for Wizer WebAssembly pre-initialization toolchain implementation
bzl_library(
    name = "wizer_toolchain",
    srcs = ["wizer_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":diagnostics",
        ":tool_cache",
        "//checksums:registry",
    ],
)

# Enhanced toolchain management libraries

bzl_library(
    name = "diagnostics",
    srcs = ["diagnostics.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "tool_cache",
    srcs = ["tool_cache.bzl"],
    visibility = ["//visibility:public"],
)

# Bzl library for File Operations toolchain implementation
bzl_library(
    name = "file_ops_toolchain",
    srcs = ["file_ops_toolchain.bzl"],
    visibility = ["//visibility:public"],
)

# Bzl library for WASM Tools Component toolchain implementation
bzl_library(
    name = "wasm_tools_component_toolchain",
    srcs = ["wasm_tools_component_toolchain.bzl"],
    visibility = ["//visibility:public"],
)

# Note: C++ toolchain configuration has been moved to @wasi_sdk repository
# The cc_toolchain is now registered via @wasi_sdk//:cc_toolchain in MODULE.bazel

file_ops_toolchain(
    name = "file_ops_toolchain_impl",
    file_ops_component = "//tools/file_operations_component:file_ops",
    wit_files = ["//tools/file_operations_component:wit_files"],
)

toolchain(
    name = "file_ops_toolchain_local",
    # Universal toolchain - works on all platforms
    toolchain = ":file_ops_toolchain_impl",
    toolchain_type = ":file_ops_toolchain_type",
)

wasm_tools_component_toolchain(
    name = "wasm_tools_component_toolchain_impl",
    wasm_tools_component = "//tools/wasm_tools_component:wasm_tools_component",
    wit_files = ["//tools/wasm_tools_component:wit_files"],
)

toolchain(
    name = "wasm_tools_component_toolchain_local",
    # Universal toolchain - works on all platforms
    toolchain = ":wasm_tools_component_toolchain_impl",
    toolchain_type = ":wasm_tools_component_toolchain_type",
)

# Hermetic WebAssembly toolchain using pre-built binaries
# These tools are downloaded via http_archive in the hermetic_extension

# Create filegroups for easy access to the hermetic tools
filegroup(
    name = "wasm_tools_hermetic_filegroup",
    srcs = ["@wasm_tools_hermetic//:bin"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "wasmtime_hermetic_filegroup",
    srcs = ["@wasmtime_hermetic//:bin"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "wit_bindgen_hermetic_filegroup",
    srcs = ["@wit_bindgen_hermetic//:bin"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "wac_hermetic_filegroup",
    srcs = ["@wac_hermetic//file"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "wkg_hermetic_filegroup",
    srcs = ["@wkg_hermetic//file"],
    visibility = ["//visibility:public"],
)

# Maintain backwards compatibility with simpler names
alias(
    name = "wasm_tools_hermetic",
    actual = ":wasm_tools_hermetic_filegroup",
)

alias(
    name = "wasmtime_hermetic",
    actual = ":wasmtime_hermetic_filegroup",
)

alias(
    name = "wit_bindgen_hermetic",
    actual = ":wit_bindgen_hermetic_filegroup",
)

alias(
    name = "wac_hermetic",
    actual = ":wac_hermetic_filegroup",
)

alias(
    name = "wkg_hermetic",
    actual = ":wkg_hermetic_filegroup",
)
