"""Toolchain type definitions"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

# File Operations Component toolchain configuration
load("//toolchains:file_ops_toolchain.bzl", "file_ops_toolchain")

# WASM Tools Component toolchain configuration
load("//toolchains:wasm_tools_component_toolchain.bzl", "wasm_tools_component_toolchain")

package(default_visibility = ["//visibility:public"])

# Toolchain type for WebAssembly tools
toolchain_type(
    name = "wasm_tools_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for WASI SDK
toolchain_type(
    name = "wasi_sdk_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for WebAssembly Package Tools (wkg)
toolchain_type(
    name = "wkg_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for jco (JavaScript Component Tools)
toolchain_type(
    name = "jco_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for C/C++ WebAssembly components
toolchain_type(
    name = "cpp_component_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for TinyGo WASI Preview 2 WebAssembly components
toolchain_type(
    name = "tinygo_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for Wasmtime WebAssembly runtime
# Note: Wizer functionality is now part of wasmtime (v39.0.0+), use wasmtime_toolchain_type
toolchain_type(
    name = "wasmtime_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for File Operations Component
toolchain_type(
    name = "file_ops_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for WASM Tools Integration Component
toolchain_type(
    name = "wasm_tools_component_toolchain_type",
    visibility = ["//visibility:public"],
)

# Toolchain type for symmetric wit-bindgen (both official and cpetig's fork)
toolchain_type(
    name = "symmetric_wit_bindgen_toolchain_type",
    visibility = ["//visibility:public"],
)

# Bzl library for tool versions (single source of truth)
bzl_library(
    name = "tool_versions",
    srcs = ["tool_versions.bzl"],
    visibility = ["//visibility:public"],
)

# Bzl library for toolchain implementation
bzl_library(
    name = "wasm_toolchain",
    srcs = ["wasm_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [":tool_versions"],
)

# Bzl library for wkg toolchain implementation
bzl_library(
    name = "wkg_toolchain",
    srcs = ["wkg_toolchain.bzl"],
    visibility = ["//visibility:public"],
)

# Bzl library for jco toolchain implementation
bzl_library(
    name = "jco_toolchain",
    srcs = ["jco_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":diagnostics",
        ":tool_cache",
        "//checksums:registry",
    ],
)

# Bzl library for C/C++ WebAssembly component toolchain implementation
bzl_library(
    name = "cpp_component_toolchain",
    srcs = ["cpp_component_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":diagnostics",
        ":tool_cache",
        "//checksums:registry",
    ],
)

# Bzl library for TinyGo WASI Preview 2 toolchain implementation
bzl_library(
    name = "tinygo_toolchain",
    srcs = ["tinygo_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":diagnostics",
        ":tool_cache",
        "//checksums:registry",
    ],
)

# Bzl library for WASI SDK toolchain implementation
bzl_library(
    name = "wasi_sdk_toolchain",
    srcs = ["wasi_sdk_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":diagnostics",
        ":tool_cache",
        "//checksums:registry",
    ],
)

# Bzl library for Wasmtime runtime toolchain implementation
bzl_library(
    name = "wasmtime_toolchain",
    srcs = ["wasmtime_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":diagnostics",
        ":tool_cache",
        "//checksums:registry",
    ],
)

# Enhanced toolchain management libraries

bzl_library(
    name = "diagnostics",
    srcs = ["diagnostics.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "tool_cache",
    srcs = ["tool_cache.bzl"],
    visibility = ["//visibility:public"],
)

# Bzl library for File Operations toolchain implementation
bzl_library(
    name = "file_ops_toolchain",
    srcs = ["file_ops_toolchain.bzl"],
    visibility = ["//visibility:public"],
)

# Bzl library for Dual Implementation File Operations toolchain
bzl_library(
    name = "dual_file_ops_toolchain",
    srcs = ["dual_file_ops_toolchain.bzl"],
    visibility = ["//visibility:public"],
)

# Bzl library for File Operations selection system
bzl_library(
    name = "file_ops_selection",
    srcs = ["file_ops_selection.bzl"],
    visibility = ["//visibility:public"],
    deps = [":dual_file_ops_toolchain"],
)

# Bzl library for WASM Tools Component toolchain implementation
bzl_library(
    name = "wasm_tools_component_toolchain",
    srcs = ["wasm_tools_component_toolchain.bzl"],
    visibility = ["//visibility:public"],
)

# Bzl library for symmetric wit-bindgen toolchain implementation
bzl_library(
    name = "symmetric_wit_bindgen_toolchain",
    srcs = ["symmetric_wit_bindgen_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":diagnostics",
        ":tool_cache",
    ],
)

# Note: C++ toolchain configuration has been moved to @wasi_sdk repository
# The cc_toolchain is now registered via @wasi_sdk//:cc_toolchain in MODULE.bazel

# Phase 4 Complete: External File Operations Component
# The external pre-built WASM component is now the standard
# See https://github.com/pulseengine/bazel-file-ops-component for component source

file_ops_toolchain(
    name = "file_ops_toolchain_impl",
    file_ops_component = "//tools/file_ops:file_ops",
    wasm_component = "@file_ops_component_external//file",
    wit_files = ["//tools/file_ops:wit_files"],
)

toolchain(
    name = "file_ops_toolchain_target",
    toolchain = ":file_ops_toolchain_impl",
    toolchain_type = ":file_ops_toolchain_type",
)

wasm_tools_component_toolchain(
    name = "wasm_tools_component_toolchain_impl",
    wasm_tools_component = "//tools/wasm_tools_component:wasm_tools_component",
    wit_files = ["//tools/wasm_tools_component:wit_files"],
)

toolchain(
    name = "wasm_tools_component_toolchain_local",
    # Universal toolchain - works on all platforms
    toolchain = ":wasm_tools_component_toolchain_impl",
    toolchain_type = ":wasm_tools_component_toolchain_type",
)

# File Operations Implementation Selection
# Build flag for selecting file operations implementation at build time
string_flag(
    name = "file_ops_implementation",
    build_setting_default = "auto",
    values = [
        "tinygo",  # TinyGo implementation (compact, secure)
        "rust",  # Rust implementation (performance, features)
        "auto",  # Automatic selection based on availability and platform
    ],
)

# Configuration settings for implementation selection
config_setting(
    name = "file_ops_use_tinygo",
    flag_values = {
        ":file_ops_implementation": "tinygo",
    },
)

config_setting(
    name = "file_ops_use_rust",
    flag_values = {
        ":file_ops_implementation": "rust",
    },
)

config_setting(
    name = "file_ops_auto_select",
    flag_values = {
        ":file_ops_implementation": "auto",
    },
)

# WASI Preview 1 Component Adapter
exports_files(["wasi_snapshot_preview1.command.wasm"])

# Bzl library for unified tool registry
bzl_library(
    name = "tool_registry",
    srcs = ["tool_registry.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//checksums:registry"],
)

# Export .bzl files for testing
exports_files([
    "tool_registry.bzl",
])
