"""WebAssembly Tools Builder

Simple proof-of-concept for building tools with Bazel (host platform only).
"""

load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

# Simple host-only tool build (no cross-compilation)
rust_binary(
    name = "simple_tool",
    srcs = ["simple_tool.rs"],
    edition = "2021",
    deps = ["@crates//:anyhow"],
)

# Alias for compatibility
alias(
    name = "all_tools",
    actual = ":simple_tool",
)
