"""BUILD file for WAC composition rules"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//wac/private:wac_bundle",
        "//wac/private:wac_compose",
        "//wac/private:wac_plug",
        "//wac/private:wac_remote_compose",
    ],
)
